--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ html, body {
     font-size: 16px;
 }
 
-.button:active {
+.button:active, .active {
     background-color: #313131;
     color: white;
 }
